--- a/configurableMenu@lestcape/locale/es.po
+++ b/configurableMenu@lestcape/locale/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-01-20 17:39-0600\n"
+"PO-Revision-Date: 2014-01-23 00:27-0600\n"
 "Last-Translator: Lester Carballo Pérez <lestcape@gmail.com>\n"
 "Language-Team: lestcape <lestcape@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -105,15 +105,6 @@ msgstr "Pulse este botón para salvar la configuración del diseño actual."
 #. configurableMenu@lestcape->settings-schema.json->app-title-size->units
 msgid "points"
 msgstr "puntos"
-
-#. configurableMenu@lestcape->settings-schema.json->hover-icon-
-#. border->description
-msgid "Border width of hover icon:"
-msgstr "Tamaño del borde del ícono de visualización:"
-
-#. configurableMenu@lestcape->settings-schema.json->hover-icon-border->tooltip
-msgid "The border width of the hover icon."
-msgstr "El tamaño del borde del ícono de visualización:"
 
 #. configurableMenu@lestcape->settings-schema.json->favorites-
 #. lines->description
@@ -282,6 +273,14 @@ msgstr "Tamaño de los íconos de las applicaciones:"
 #. configurableMenu@lestcape->settings-schema.json->icon-app-size->tooltip
 msgid "Set the application icon size."
 msgstr "Establesca el tamaño de los íconos de las applicaciones:"
+
+#. configurableMenu@lestcape->settings-schema.json->hover-box->description
+msgid "Hover icon have a box"
+msgstr "El ícono de visualización tiene caja"
+
+#. configurableMenu@lestcape->settings-schema.json->hover-box->tooltip
+msgid "Choose whether or not to have a box on the hover icon."
+msgstr "Seleccione si desea o no tener una caja en el ícono de visualización."
 
 #. configurableMenu@lestcape->settings-schema.json->accessible-
 #. box->description
