--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -172,6 +172,7 @@ Change Log:
    - Fixed the bug on mint and windows 7 layouts, that make the menu close if searchEntry do not have focus.
    - Control buttons and hover icon have now an style class and can be used in the css file of the Cinnamon theme.
    - Removed the hover icon borders for theme compatibility reason.
+   - Added theme Vampire, Garibaldo and GnoMenu.
 
 0.8-Beta
    - The Accessible panel is now configurable and has two drag and drop areas (Places and Apps).
