Add option to settings of GnoMenu layout and translate.

--- a/configurableMenu@lestcape/locale/default.po
+++ b/configurableMenu@lestcape/locale/default.po
@@ -398,6 +398,15 @@ msgstr ""
 msgid "Choose whether or not to show the scrolling area of accessible panel."
 msgstr ""
 
+#. configurableMenu@lestcape->settings-schema.json->scroll-
+#. gnomenu->description
+msgid "Show scrolling area of GnoMenu panel"
+msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->scroll-gnomenu->tooltip
+msgid "Choose whether or not to show the scrolling area of GnoMenu panel."
+msgstr ""
+
 #. configurableMenu@lestcape->settings-schema.json->show-app-
 #. title->description
 msgid "Show name of the selected application"
@@ -452,6 +461,14 @@ msgstr ""
 
 #. configurableMenu@lestcape->settings-schema.json->accessible-box->tooltip
 msgid "Choose whether or not to have a box on the accessible panel."
+msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->gnomenu-box->description
+msgid "GnoMenu buttons have a box"
+msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->gnomenu-box->tooltip
+msgid "Choose whether or not to have a box on the GnoMenu buttons."
 msgstr ""
 
 #. configurableMenu@lestcape->settings-schema.json->spacer-size->description
@@ -621,6 +638,16 @@ msgstr ""
 #. configurableMenu@lestcape->settings-schema.json->icon-accesible-
 #. size->tooltip
 msgid "Set the accessible icons size."
+msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->icon-gnomenu-
+#. size->description
+msgid "GnoMenu icons size:"
+msgstr ""
+
+#. configurableMenu@lestcape->settings-schema.json->icon-gnomenu-
+#. size->tooltip
+msgid "Set the GnoMenu icons size."
 msgstr ""
 
 #. configurableMenu@lestcape->settings-schema.json->icon-accesible-size->units
