--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -9,6 +9,8 @@ Email: lestcape@gmail.com
 
 Website: https://github.com/lestcape/Configurable-Menu
 
+More Information: https://github.com/lestcape/Configurable-Menu/wiki
+
 --------------
 
 "Configurable Menu is a fork of the Cinnamon stock menu applet. It has much more features and is extremely configurable."
