--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -1,7 +1,7 @@
 Cinnamon Applet: Configurable Menu version v0.9-Beta
 ==============
 
-Release Date: 28 january 2014
+Release Date: 30 january 2014
 
 Authors: Lester Carballo Pérez(https://github.com/lestcape) and Garibaldo(https://github.com/Garibaldo).
 
@@ -19,7 +19,6 @@ More Information: https://github.com/lestcape/Configurable-Menu/wiki
 
 This latest version brings a lot of cool new stuff.
 
-Be cautious: This applet is still considered non-stable and may have bugs... Install it for testing purposes only.
 
 Some features:
 --------------
@@ -73,11 +72,14 @@ This program is distributed in the hope that it will be useful, but WITHOUT ANY 
 You should have received a copy of the GNU General Public License along with this program. If not, see http://www.gnu.org/licenses/.
 
 
-Installation Instructions:
+Installation instructions of nightly build:
 --------------
-1. Download this applet from their website : https://github.com/lestcape/Configurable-Menu
+1. Download this applet from their website: https://github.com/lestcape/Configurable-Menu/archive/master.zip
 2. Unzip the downloaded file and copy the folder configurableMenu@lestcape at /home/USERNAME/.local/share/cinnamon/applets/ where USER is the user for your operating system.
 3. Enable the applet in Cinnamon Settings and use it.
+
+Be cautious: This version of applet is still considered non-stable and may have bugs... Install it for testing purposes only.
+
 
 Add theme support:
 --------------
@@ -145,14 +147,15 @@ Add theme support:
 
 More info: https://github.com/lestcape/Configurable-Menu/wiki/Add-theme-support
 
+
 Add new languages:
 --------------
-
 1. Install the poedit program.
 2. Open the file default.po with the poedit software. This file is located in the folder /home/USER/.local/share/cinnamon/applets/configurableMenu@lestcape/locale/
 3. Make the translation, save the result, and send the .po file updated by the e-mail address here present, or add directly into the website of this software
 
 More info: https://github.com/lestcape/Configurable-Menu/wiki/Add-new-languages
+
 
 Change Log:
 ==============
@@ -171,78 +174,7 @@ Change Log:
    - Several visually improvement in different layouts, especially the horizontal.
    - Now you can rename the apps on the accessible panel.
 
-0.8-Beta
-   - The Accessible panel is now configurable and has two drag and drop areas (Places and Apps).
-   - Implemented new “Places” fields (PC, Desktop, Home, Network and Trash).
-   - You can add items to the accessible panel with a submenu and a drag and drop operation.
-   - The favorites icons have now submenus.
-   - Reduced the width of search item on windows 7 layout to be the same size or less of favorites area.
-   - System buttons have now several layouts available.
-   - The Accessible panel can have icons or not.
-   - Categories can have icons or not.
-   - You can remove the box pointer from the menu.
-   - Implementation of separators, with configurable options.
-   - The hover icon has a configurable border now.
-   - Now you can align the menu to the screen edge.
-   - When the menu is re-sizable, a resize handle appears on the corresponding corner.
-   - Now you can expand the menu to full screen mode.
-   - Now you can have the application description in the application entries.
-   - Performance improvements.
-   - Many bug fixes.
-
-0.7-Beta
-   - Fixed a bug in the keyboard navigation, and add for more componets.
-   - Now you can control the size of all icons in the menu.
-   - Added Accessible theme to allow the bar like Mint menu.
-   - Added Accessible Inverted theme to allow the bar like Windows menu.
-   - Added Mint theme.
-   - Added Windows 7 theme.
-   - A button to swap "all app" by "favorites" was implemented.
-   - The favorites can show the text of applications also in icon and list view mode.
-   - The power buttons was reimplemented, now are better.
-   - The internal layout have change to support the new accessible bar.
-   - Several minor bugs are fixed(but i know that have some more for example in Mint theme).
-   - Added settings button.
-   - Time and date now appear only when you don't have any app selected in the same place of title and description.
-   - Time and date can be set visible or hide.
-   - Now you can select if description and title of selected app appear, also you can change the font size.
-   - Implementation of power buttons box to be modular.
-   - Implementation of scroll buttons class to be modular, also now allow to handle the height so much better.
-   - Changed the mode of controlling the numbers of columns of the items view.
-   - Added option to resize the menu with the mouse.
-   - Added button to the control box to allow or not the resize of menu.
-
-0.6-Beta
-   - Fixed several bugs.
-   - Ability to drag and drop items to Desktop.
-   - Now the option "add to panel" do not open panel launcher applet if it's closed.
-   - Now the option "add to panel" also add item to icon list applet of physic if it's open.
-   - Fixed the keyboard navegation.
-   - Unified mechanisms for the different items views.
-   - Show and hide power buttons.
-
-0.5-Beta
-   - Added Dragon theme to put the categories horizontally.
-   - Added Horizontal theme to put  all horizontally.
-   - Added Dragon Inverted theme to put the favorites in left.
-   - Implementation of horizontal auto scrolling(do not exist in cinnamon).
-   - Implementation of favorites with multiple lines.
-   - Implementation of items multicolumn horizontal.
-
-0.4-Beta
-   - Fixed bug in list view mode that cause lag when you change categories.
-   - Fixed bug in icon view mode when searching app.
-   - Option "allow path entry in the menu search box", now work again and it's better.
-   - Fixed some minors bugs.
-
-0.3-Beta
-   - Added view items.
-
-0.2-Beta
-   - Added functionality and menu on hover icon.
-
-0.1-Beta
-   - Initial release.
+A complete change log can be found here: https://github.com/lestcape/Configurable-Menu/wiki/Change-Log
 
 ==============
 To report bugs, request new features and make suggestions, please visit:
